--- a/cmd/rikka/config.yaml.example
+++ b/cmd/rikka/config.yaml.example
@@ -16,3 +16,11 @@ redis:
   address: redis
   port: 6379
   keyPair: secret
+seed:
+  adminUserGroupAndUserSeeder:
+    userGroupName: admin-group
+    organization: admin-org
+    invitationCode: test-invitation-code
+    userName: admin
+    userPassword: password
+
