--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,9 +26,21 @@ services:
       - 8080:8080
     profiles:
       - extra
+  minio:
+    image: minio/minio:latest
+    ports:
+      - 9000:9000
+    environment:
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: adminadmin
+    volumes:
+      - minio:/data
+    command: server /data
 
 volumes:
   mariadb:
     driver: local
   go-pkg:
+    driver: local
+  minio:
     driver: local
