[add] config.yamlの例にcorsを追加

--- a/cmd/rikka/config.yaml.example
+++ b/cmd/rikka/config.yaml.example
@@ -1,6 +1,9 @@
 listen:
   address: 0.0.0.0
   port: 8080
+  cors:
+  origins:
+    - http://localhost:4040
 # use TLS.
 #  tls:
 #    certFilePath: cmd/rikka/server.crt
