--- a/.github/workflows/push-sakura-registry.yaml
+++ b/.github/workflows/push-sakura-registry.yaml
@@ -19,7 +19,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=latest
-            type=sha
+            type=sha,prefix=,format=short
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
