--- a/.github/workflows/push-sakura-registry.yaml
+++ b/.github/workflows/push-sakura-registry.yaml
@@ -44,5 +44,5 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ steps.image-tag.outputs.tags }}
-          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache
-          cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:buildcache,mode=max
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
