update: example に追加

--- a/cmd/rikka/config.yaml.example
+++ b/cmd/rikka/config.yaml.example
@@ -41,6 +41,10 @@ seed:
     invitationCode: test-invitation-code
     userName: admin
     userPassword: password
+    bastionHost: bastion
+    bastionPort: 22
+    bastionUser: bastion
+    bastionPassword: password
 minio:
   endPoint:
   accessKeyID:
