--- a/.github/workflows/push-image-ghcr.yaml
+++ b/.github/workflows/push-image-ghcr.yaml
@@ -8,9 +8,12 @@ on:
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     env:
+      REGISTRY: ghcr.io
       IMAGE_NAME: ictsc-rikka
-      REGISTRY: ictsc2021.sakuracr.jp
     steps:
       - name: checkout
         uses: actions/checkout@v3
@@ -19,7 +22,7 @@ jobs:
         uses: docker/metadata-action@v4
         id: image-tag
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=latest
             type=sha,prefix=,format=short
@@ -30,12 +33,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to Sakura Container Registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.SAKURACR_USER }}
-          password: ${{ secrets.SAKURACR_PASSWORD }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v3
