--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     profiles:
       - extra
   minio:
-    image: minio/minio:latest
+    image: minio/minio:RELEASE.2023-07-21T21-12-44Z
     ports:
       - 9000:9000
     environment:
