--- a/scripts/docker-compose.override.yml
+++ b/scripts/docker-compose.override.yml
@@ -1,10 +1,22 @@
 version: "3"
 
 services:
+  rikka:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: /root/rikka --config /root/config.yaml
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./cmd/rikka/config.docker.yaml:/root/config.yaml
+      - .:/go/src/ictsc-rikka:cached
+      - .local/pkg:/go/pkg:cached
+    restart: unless-stopped
   mariadb:
     image: mariadb:10.5.10
     ports:
-      - 3306:3306
+      - "3306:3306"
     volumes:
       - mariadb:/var/lib/mysql
       - ./scripts/test_seed.sql:/docker-entrypoint-initdb.d/test_seed.sql
