--- a/.github/workflows/reviewdog-pr.yml
+++ b/.github/workflows/reviewdog-pr.yml
@@ -9,3 +9,5 @@ jobs:
 
       - name: golangci-lint
         uses: reviewdog/action-golangci-lint@v2
+        with:
+          golangci_lint_flags: --timeout=10m
