--- a/cmd/ritto/config.yaml.example
+++ b/cmd/ritto/config.yaml.example
@@ -4,16 +4,10 @@ mariadb:
   username: rikka
   password: rikka-password
   database: rikka
-redis:
-  idleConnectionSize: 10
-  address: localhost
-  port: 6379
-  keyPair:
 rikka:
   authorId:
 growi:
   url:
   token:
-  path:
-  username:
-  password:
+  problemPath:
+  noticePath:
