update: compose 周りを改善

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,12 @@
-.vscode
+.github
+.vscodea
 scripts
-docker-compose.yml
+compose.yml
+compose.prod.yml
+.env
+.env.dev
+.gitignore
+Makefile
+Dockerfile
+Dockerfile.dev
 README.md
