fix: dockerignore で Makefile が ignore されていた問題を修正

--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -24,3 +24,7 @@ services:
       - ./cmd/ritto/run.sh:/root/run.sh
     command: ./run.sh
     restart: unless-stopped
+    depends_on:
+      - mariadb
+      - redis
+      - minio
