--- a/compose.yml
+++ b/compose.yml
@@ -32,7 +32,7 @@ services:
   redis:
     image: redis:6.2.4
     ports:
-      - ${REDIS_PORT}:6379
+      - 127.0.0.1:${REDIS_PORT}:6379
     restart: always
   minio:
     image: minio/minio:RELEASE.2023-07-21T21-12-44Z
